--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
+    "blog": "astro dev",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.3.1",
     "@astrojs/mdx": "^0.19.0",
     "@astrojs/rss": "^2.3.2",
-    "@astrojs/sitemap": "^1.2.2"
+    "@astrojs/sitemap": "^1.2.2",
+    "@astrojs/tailwind": "^3.1.1",
+    "astro": "^2.3.1",
+    "tailwindcss": "^3.3.2"
   }
 }
