--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "@astrojs/mdx": "^0.19.0",
     "@astrojs/rss": "^2.3.2",
     "@astrojs/sitemap": "^1.2.2",
+    "@astrojs/solid-js": "^2.1.0",
     "@astrojs/tailwind": "^3.1.1",
     "astro": "^2.3.1",
+    "solid-js": "^1.7.3",
     "tailwindcss": "^3.3.2"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
