--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@astrojs/sitemap": "^1.2.2",
     "@astrojs/solid-js": "^2.1.0",
     "@astrojs/tailwind": "^3.1.1",
+    "@astrojs/vercel": "^3.2.5",
     "astro": "^2.3.1",
+    "astro-analytics": "^2.6.0",
     "solid-js": "^1.7.3",
     "tailwindcss": "^3.3.2"
   },
