--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/solid-js": "^2.1.0",
     "@astrojs/tailwind": "^3.1.1",
     "@astrojs/vercel": "^3.2.5",
+    "@vercel/analytics": "^1.0.0",
     "astro": "^2.3.1",
     "astro-analytics": "^2.6.0",
     "solid-js": "^1.7.3",
