--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vercel/analytics": "^1.0.0",
     "astro": "^2.3.1",
     "astro-analytics": "^2.6.0",
+    "sass": "^1.62.1",
     "solid-js": "^1.7.3",
     "tailwindcss": "^3.3.2"
   },
